# assignment-urumi

./: assignment-guidelines.md  docker-compose.yml
backend/: .env  main.py  pyproject.toml
backend/app/api/: deps.py
backend/app/api/endpoints/: stores.py
backend/app/db/: session.py
backend/app/models/: auth_schema.py  store.py
backend/app/services/: store_service.py
charts/woocommerce/: Chart.yaml  values.yaml
charts/woocommerce/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml
frontend/: drizzle.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
frontend/app/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: store-logs.tsx
frontend/lib/: auth-client.ts  auth.ts  schema.ts  types.ts
